# jasper-cli

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
jasper/: config.json  jasper.py  pretty.py  requirements.txt  utils.py
jasper/commands/: badges.py  check.py  crit.py  explain.py  get.py  history.py  init.py  ping.py  relay.py  submit.py  update.py  version.py
